--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ form {
 
 input {
     position: relative;
-    margin-bottom: 0em;
+    margin-bottom: auto;
     width: 100%;
     padding: 1.2em;
     border-radius: 5px;
@@ -60,8 +60,8 @@ img {
     visibility: hidden;
     position: absolute;
     right: 21vw;
-    margin-top: -2em;
-    max-width: 3vh;
+    margin-top: .9em;
+    max-width: 1em;
 }
 
 .invalid {
@@ -69,10 +69,15 @@ img {
 }
 
 .error-message {
-    visibility: ;
-    margin-left: 18vw;
-    font-size: 9px;
-    font-weight: 400;
+    display: flex;
+    width: 75%;
+    margin-left: 27em;
+    margin-right: 1em;
+    margin-top: 0em;
+    padding-bottom: 1.5em;
+    padding-top: 0em;
+    font-size: .5em;
+    font-weight: 600;
     color: red;
 }
 
@@ -87,7 +92,7 @@ button {
     font-weight: 600;
     text-transform: uppercase;
     color: whitesmoke;
-    box-shadow: 0px 4px 2px 0px hsl(154, 59%, 35%);
+    box-shadow: 0px 3px 2px 0px hsl(154, 59%, 35%);
 }
 
 button:hover {
@@ -119,11 +124,8 @@ button:active {
 }
 
 .article {
-    width: 32vw;
-    margin-right: 4em;
+    margin-right: 2em;
     color: whitesmoke;
-    font-weight: bold;
-    font-size: inherit;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -134,10 +136,10 @@ h1 {
 }
 
 #left {
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 400;
     line-height: 1.5;
-    text-align: left;
+    text-align: left ;
 }
 
 
@@ -150,3 +152,125 @@ h1 {
      color: hsl(228, 45%, 44%); 
      font-weight: 500;
     }
+
+@media screen and (max-width: 1184px) {
+    form {
+        width: 35vw;
+    }
+}
+
+@media screen and (max-width: 1090px) {
+    .container {
+        margin: 5% 14%;
+    }
+
+    form {
+        width: 37vw;
+    }
+
+    img {
+        right: 19vw;
+    }
+}
+
+@media screen and (max-width: 1030px) {
+    form {
+        width: 40vw;
+    }
+
+    .article {
+        width: 35vw;
+    }
+}
+
+@media screen and (max-width: 945px) {
+    .container {
+        margin: 5% 10%;
+    }
+
+
+    form {
+        width: 43vw;
+    }
+
+    .article {
+        width: 37vw;
+    }
+
+    img {
+        right: 17vw;
+    }
+}
+
+@media screen and (max-width: 885px) {
+    .container {
+        margin: 5% 8%;
+    }
+
+
+    form {
+        width: 46vw;
+    }
+
+    .article {
+        width: 38vw;
+    }
+
+    img {
+        right: 15vw;
+    }
+}
+
+@media screen and (max-width: 885px) {
+    .container {
+        margin: 5% 8%;
+        flex-direction: column;
+    }
+
+    .article {
+        margin-bottom: 1.5em;
+        width: 80vw;
+        margin-left: 3em;
+    }
+
+    #left {
+        font-size: 16px;
+    }
+
+    form {
+        width: 80vw;
+    }
+
+    img {
+        right: 18vw;
+    }
+
+
+}
+
+@media screen and (max-width: 480px) {
+    img {
+        right: 22vw;
+    }
+
+    .error-message {
+        font-size: .4em;
+        font-weight: 700;
+
+    }
+
+
+}
+
+@media screen and (max-width: 400px) {
+    .article {
+        width: 95vw;
+    }
+
+    form {
+        width: 95vw;
+    }
+
+
+}
+
